--- a/oralcare/oralcare/Base.lproj/Main_iPhone.storyboard
+++ b/oralcare/oralcare/Base.lproj/Main_iPhone.storyboard
@@ -1,23 +1,263 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4451" systemVersion="13A461" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="hHe-xI-hiD">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3676"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--Item-->
+        <scene sceneID="N9K-Kf-qNM">
+            <objects>
+                <navigationController id="wg9-hp-s2L" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="9Wz-Lc-MlP"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="qqR-61-tmg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Xg0-Hy-YOT" kind="relationship" relationship="rootViewController" id="5h3-aX-NG3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I7I-05-gij" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-167.5" y="-1041.4999999999995"/>
+        </scene>
+        <!--？-->
+        <scene sceneID="BN5-TV-IpW">
+            <objects>
+                <viewController id="Xg0-Hy-YOT" customClass="OCHOMEViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="k79-sl-xzi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="190" sectionHeaderHeight="1" sectionFooterHeight="22" id="UAu-ww-8ba">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="activityCell" rowHeight="120" id="R4h-R5-44s" customClass="OCATTableViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="R4h-R5-44s" id="QfP-ZM-KDd">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1.jpg" id="rrk-pi-z0c">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="医院活动" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uBf-0i-Gd5">
+                                                    <rect key="frame" x="137" y="38" width="101" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="ocCellImageV" destination="rrk-pi-z0c" id="sWG-jR-hqF"/>
+                                            <outlet property="ocCellLabel" destination="uBf-0i-Gd5" id="fQo-0V-1Ro"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Xg0-Hy-YOT" id="J3B-CG-p9H"/>
+                                    <outlet property="delegate" destination="Xg0-Hy-YOT" id="hdD-wc-9Je"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="？" id="jbc-JB-vf6"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="tableView" destination="UAu-ww-8ba" id="jlt-04-JhE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dsa-7S-g69" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="355.5" y="-1033.5"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="8IR-Ob-ePI">
+            <objects>
+                <navigationController id="Eui-Rq-TfX" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="e59-AY-m63"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="36O-b0-L2I">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="2pE-nn-Per" kind="relationship" relationship="rootViewController" id="y7k-60-adX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r8w-EI-oQO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-155.5" y="-297.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Beo-nR-yA7">
+            <objects>
+                <viewController id="2pE-nn-Per" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="23J-P8-E9j">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="csa-R1-uiK"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RLK-lZ-juY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="367.5" y="-256.49999999999989"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="IZU-Rf-ryI">
+            <objects>
+                <navigationController id="P7p-iS-3AD" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="2nr-xl-lME"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="lNy-He-64f">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="0M2-3H-61Z" kind="relationship" relationship="rootViewController" id="YmD-Lp-8l8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5NX-8y-h8T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-155.5" y="455.49999999999989"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="VcF-Hs-PmO">
+            <objects>
+                <navigationController id="OoY-Uj-i6e" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="bsS-Gv-Ehb"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="D5t-V1-XET">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="R1b-IZ-HHe" kind="relationship" relationship="rootViewController" id="Jj0-KG-fgU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X4e-5p-Tli" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-155.5" y="1274.4999999999995"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="OKU-vJ-8iu">
+            <objects>
+                <navigationController id="gpZ-5n-cRC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Oln-rz-Z80"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ocn-aN-mAu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="noa-t6-N0c" kind="relationship" relationship="rootViewController" id="i0b-aF-IRc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DN4-Ep-qun" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-144.5" y="2111.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dWX-Ji-6pu">
+            <objects>
+                <tabBarController id="hHe-xI-hiD" customClass="OCTABViewController" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="mW7-Ly-nZk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="wg9-hp-s2L" kind="relationship" relationship="viewControllers" id="SFc-hq-SVl"/>
+                        <segue destination="Eui-Rq-TfX" kind="relationship" relationship="viewControllers" id="h6x-E6-eUy"/>
+                        <segue destination="P7p-iS-3AD" kind="relationship" relationship="viewControllers" id="TGc-u2-hJJ"/>
+                        <segue destination="OoY-Uj-i6e" kind="relationship" relationship="viewControllers" id="c9g-Y2-QKV"/>
+                        <segue destination="gpZ-5n-cRC" kind="relationship" relationship="viewControllers" id="pbN-Fe-5Dk"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MKt-F5-kUB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-711.5" y="455.49999999999989"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="OCViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1347.5" y="591.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="fGu-fg-b9K">
+            <objects>
+                <viewController id="0M2-3H-61Z" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="biQ-aI-zps">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="EVs-IG-9Co"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PT6-a5-TpW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="375.5" y="543.49999999999977"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="XGv-bp-z8I">
+            <objects>
+                <viewController id="R1b-IZ-HHe" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6yK-DQ-SNW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="aD6-eX-eHl"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yhF-hv-5wz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="391.5" y="1335.4999999999995"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Wf3-3O-Sfw">
+            <objects>
+                <viewController id="noa-t6-N0c" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IF7-I3-wIa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="zZF-kr-bT2"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qo1-ly-ADp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="367.5" y="2167.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="1.jpg" width="324" height="220"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
